contrib/platiagro/datasets/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: datasets
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /datasets/apis/
    rewrite:
      uri: /
    route:
    - destination:
        host: $(DATASETS_SERVICE).$(DATASETS_NAMESPACE).svc.cluster.local
        port:
          number: 8080
    timeout: 7200s
